<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Renegade Clan</string>

    <!-- Menu Actions -->
    <string name="action_refresh">Refresh</string>

    <!-- Tab Titles -->
    <string-array name="section_titles">
        <item>Status</item>
        <item>TeamSpeak</item>
        <item>Cycle</item>
        <item>Bans</item>
        <item>Warnings</item>
    </string-array>
    <string-array name="section_classes">
        <item>StatusFragment_Tabs_Cards</item>
        <item>TSFragment_Tabs</item>
        <item>MapCycleFragment_Tabs_Cards</item>
        <item>BansFragment_Tabs_Cards</item>
        <item>WarningsFragment_Tabs_Cards</item>
    </string-array>

    <string name="title_section1">Status</string>
    <string name="title_section2">TeamSpeak</string>
    <string name="title_section3">Cycle</string>
    <string name="title_section4">Bans</string>
    <string name="title_section5">Warnings</string>

    <!-- Status -->
    <string name="mapImageDescription">Map Image</string>
    <string name="lblTimelimit">Timelimit</string>
    <string name="lblMapDesc">Description</string>
    <string name="lblNextMap">Next:</string>
    <string name="lblCurrentMap">Map:</string>
    <string name="lblPlayers">Players:</string>
    <string name="lblMod">Mod:</string>
    <string name="axisTitle">Axis</string>
    <string name="alliesTitle">Allies</string>
    <string name="spectatorsTitle">Spectators</string>
    <string name="connectingTitle">Connecting</string>
    <string name="headerName">Name</string>
    <string name="headerXP">XP</string>
    <string name="headerPing">Ping</string>
    <string name="serverEmpty">Server is empty</string>
    <string name="serverName">Server Name</string>

    <!-- Placeholder Text -->
    <string name="sampleText">Lorem ipsum</string>
    <string name="sampleDate">01/01/15 12:30p</string>

    <!-- Bans -->
    <string name="bans_banner">Banner:</string>
    <string name="bans_expires">Expires:</string>

    <!-- Warnings -->
    <string name="warnings_warner">Warner:</string>

</resources>
