<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="5dp"
        card_view:contentPadding="5dp"
        card_view:cardUseCompatPadding="true">

        <TableLayout
            android:id="@+id/mapDetailTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mapName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:hint="@string/sampleText"
                    android:layout_span="2"
                    style="@style/AppTheme.TextAppearance.Medium" />
            </TableRow>
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/mapImage"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_column="0"
                    android:layout_span="1"
                    android:contentDescription="@string/mapImageDescription"
                    android:src="@drawable/unknown_map"
                    android:cropToPadding="false"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_span="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblMapDesc"
                        android:textAppearance="@style/AppTheme.TextAppearance.Small"
                        android:textStyle="bold" />
                    <!--android:textAppearance="?android:attr/textAppearanceSmall"-->

                    <TextView
                        android:id="@+id/mapDesc"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:hint="@string/sampleText"
                        android:textAppearance="@style/AppTheme.TextAppearance.Small" />

                    <TextView
                        android:id="@+id/spacer"
                        android:layout_width="10dp"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/lblTimelimit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTimelimit"
                        android:textAppearance="@style/AppTheme.TextAppearance.Small"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mapTimelimit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/sampleText"
                        android:textAppearance="@style/AppTheme.TextAppearance.Small" />

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>