<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="5dp"
        card_view:contentPadding="5dp"
        card_view:cardUseCompatPadding="true">

        <TableLayout
            android:id="@+id/warningTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:measureWithLargestChild="false"
            android:weightSum="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/warnedPlayer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:hint="@string/sampleText"
                    android:layout_weight="0.65"
                    style="@style/AppTheme.TextAppearance.Medium"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/warningCreated"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/sampleDate"
                    android:layout_weight="0.35"
                    style="@style/AppTheme.TextAppearance.Small"
                    android:gravity="end" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp">

                <TextView
                    android:id="@+id/warning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/sampleText"
                    android:textAppearance="@style/AppTheme.TextAppearance.Small" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start">

                    <TextView
                        android:id="@+id/lblWarner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warnings_warner"
                        android:textAppearance="@style/AppTheme.TextAppearance.Small"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/warner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/sampleText"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/lblWarner"
                        android:layout_marginStart="5dp"
                        android:textAppearance="@style/AppTheme.TextAppearance.Small" />

                </RelativeLayout>

            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>